Details
-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 0.8.0
-
Fix Version/s: 0.9.0
-
Labels:
-
Environment:Linux Mint 18.2
Anaconda Python distribution + pyarrow installed from the conda-forge channel
-
External issue URL:
Description
There appears to be a memory leak when using PyArrow to convert tables containing array columns to Pandas DataFrames.
See the `test_memory_leak.py` example here: https://gitlab.com/ostrokach/pyarrow_duplicate_column_errors
Attachments
Issue Links
- links to